# mvi

./: .gitignore  Cargo.toml  README.md
libretro-ffi/: Cargo.toml  build.rs
libretro-ffi/src/: libretro_trace_extensions.h  wrapper.h
src/: expression.rs  main.rs  rhai.rs
src/core/: info.rs  mod.rs  savestate.rs  symbols.rs  trace.rs
src/tas/: greenzone.rs  input.rs  mod.rs  movie.rs
src/tas/edit/: mod.rs  pattern.rs
src/tas/movie/: file.rs  mod.rs
src/ui/: audio.rs  keybinds.rs  menu.rs  mod.rs  piano_roll.rs  ramwatch.rs
src/ui/backend/: mod.rs  render.rs
src/ui/debug/: mod.rs  trace.rs
src/ui/debug/disasm/: mod.rs  snes.rs
src/ui/keybinds/: bindings.rs  editor.rs  mod.rs
