[workspace]
members = ["libretro-ffi"]
resolver = "2"

[package]
name = "mvi"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
audio = "0.2.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
cfg-if = "1.0.0"
ciborium = "0.2.1"
cpal = "0.17.1"
crossbeam = "0.8.2"
dirs = "6.0.0"
flate2 = { version = "1.0.28", default-features = false, features = ["zlib-ng"] }

imgui = { version = "0.12.0", features = ["docking", "tables-api"] }
imgui-winit-support = "0.13.0"
itertools = "0.14.0"

libloading = "0.9.0"
libretro-ffi = { version = "0.1.0", path = "libretro-ffi" }
reqwest = "0.13.1"
rfd = "0.17.1"
rubato = "1.0.0"
rust-ini = "0.21.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
smallvec = "1.11.2"
thiserror = "2.0.17"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
winit = { version = "0.30", features = ["rwh_05", "serde"] }
zerocopy = { version = "0.8.20" }
zip = { version = "7.0.0", features = ["deflate", "zstd", "bzip2"], default-features = false }

[profile.dev]
opt-level = 1

[profile.profile]
inherits = "release"
debug = true

[patch.crates-io]
imgui = { git = "https://github.com/imgui-rs/imgui-rs", rev = "67f7f11363e62f09aa0e1288a17800e505860486" }
